# ligo-gw-detection

./: .gitattributes  .gitignore  COMMIT_PLAN.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  QUICKSTART.md  README.md  WEEK3_4_SUMMARY.md  pyproject.toml
.github/workflows/: tests.yml
ligo_gw/: __init__.py
ligo_gw/analysis/: __init__.py  metrics.py  visualization.py
ligo_gw/inference/: __init__.py  detector.py  streaming.py
ligo_gw/models/: __init__.py  advanced_models.py  baseline_cnn.py  parameter_estimation.py  streaming_cnn.py
papers/: ARXIV_SUBMISSION.md  METHODS_PAPER.md  methods_paper.tex  references.bib
scripts/: inference.py  train.py  train_multitask.py  train_streaming.py
tests/: __init__.py  test_data.py  test_inference.py  test_models.py
